# portubot

./: .env.example  Dockerfile  LICENSE  README.md  app.py  compose.yaml  pyproject.toml  pyproject.toml.backup  requirements.txt  rxconfig.py
.web/: package.json  reflex.install_frontend_packages.cached  reflex.json
.web/pages/: _app.js  index.js
.web/utils/: context.js
backend/portubot/: __init__.py  portubot.py
frontend/portubot/: .gitignore
frontend/portubot/portubot/: portubot.py  state.py  style.py
src/portubot/: portubot.py
