[tool.poetry]
name = "portubot"
version = "0.1.0"
description = ""
authors = ["luhodaan <luca.pasquarelli.villa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
langchain = "^0.3.24"
langchain-openai = "^0.3.14"
python-dotenv = "^1.1.0"
langchain-cli = "^0.0.36"
langgraph = "^0.4.0"
dash = "^3.0.4"
pandas = "^2.2.3"
dash-chat = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
